<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TummyBuddy</string>
    <string name="edit_message">Search</string>
    <string name="button_send">Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_sixty_four">64 Degrees!</string>
    <string name="button_canyon">Canyon Vista</string>
    <string name="button_ventanas">Cafe Ventanas</string>
    <string name="button_med">Club Med</string>
    <string name="button_foodworx">Foodworx</string>
    <string name="button_goodys">Goody\'s</string>
    <string name="button_pines">Pines</string>
    <string name="button_roots">Roots</string>
    <string name="button_bistro">The Bistro</string>
    <string name="error_loading">Error loading your request</string>
    <string name="title_activity_display_menu">DisplayMenuActivity</string>
    <string name="breakfast">sixty_four_breakfast</string>
    <string name="dining_halls_hours">dining_halls_hours</string>
    <string name="search_hint">Type an item to search here!</string>
    <string name="title_search_activity">searchActivity</string>
    <string name="search_title">search!!</string>
    <string name="title_wishlist_activity">WishList</string>
    <string name="title_counter_activity">Tracker</string>
</resources>